--- a/templates/count.html
+++ b/templates/count.html
@@ -1,5 +1,7 @@
 <h1>统计结果，文本总字数为{{ count }}字</h1>
 <h2>你的文本</h2>
+<a href="..">回到主页</a>
+<br>
 {{ text }}
 <br>
 {% for word,count in sorted %}<! -- 其中Word,count可是任意字符，能与sorted中每个参数对应即可-->
